k8s/base/apps/wordpress/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wordpress
  namespace: wordpress
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "sock1000kg.io.vn"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wordpress
          port: 80
